// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-stylus Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / Stylus options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / Stylus options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "import": Array [
                          "file.js",
                          "file2.js",
                        ],
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / Stylus options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / Stylus options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "import": Array [
                          "file.js",
                          "file2.js",
                        ],
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "import": Array [
                          "file.js",
                          "file2.js",
                        ],
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / Stylus options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / Stylus options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "import": Array [
                          "file.js",
                          "file2.js",
                        ],
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "import": Array [
                          "file.js",
                          "file2.js",
                        ],
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {},
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / Stylus options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / Stylus options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.styl\\$/,
                  "use": Array [
                    "css({\\"modules\\":true,\\"importLoaders\\":2})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/stylus-loader",
                      "options": Object {
                        "import": Array [
                          "file.js",
                          "file2.js",
                        ],
                        "use": Array [
                          "foo",
                        ],
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.styl\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
